validators selection by stash

--- a/pallets/poa/Cargo.toml
+++ b/pallets/poa/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 default = ['std']
 std = [
     'serde',
+    'balances/std',
     'codec/std',
     'frame-support/std',
     'session/std',
@@ -21,6 +22,13 @@ std = [
 features = ['derive']
 optional = true
 version = '1.0.101'
+
+[dependencies.balances]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+package = 'pallet-balances'
+rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
+version = '2.0.0'
 
 [dependencies.codec]
 default-features = false
