--- a/pallets/poa/Cargo.toml
+++ b/pallets/poa/Cargo.toml
@@ -14,6 +14,7 @@ std = [
     'session/std',
     'sp-runtime/std',
     'sp-io/std',
+    'sp-staking/std',
     'sp-std/std',
     'system/std',
 ]
@@ -62,6 +63,12 @@ rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
 version = '2.0.0'
 
 [dependencies.sp-runtime]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
+version = '2.0.0'
+
+[dependencies.sp-staking]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
