--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -250,8 +250,7 @@ path = "../pallets/reserve"
 default-features = false
 version = '2.0.0'
 package = "pallet-mandate"
-path = "../../pallet-mandate"
-#git = 'https://github.com/ETeissonniere/pallet-mandate'
+git = 'https://github.com/ETeissonniere/pallet-mandate'
 
 [features]
 default = ['std']
