--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -2,102 +2,88 @@
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 package = 'pallet-authority-discovery'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.authorship]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 package = 'pallet-authorship'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.babe]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 package = 'pallet-babe'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.balances]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 package = 'pallet-balances'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.codec]
 default-features = false
 features = ['derive']
 package = 'parity-scale-codec'
-version = '1.0.0'
+version = '1.2.0'
 
 [dependencies.collective]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 package = 'pallet-collective'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.frame-executive]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.frame-support]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.grandpa]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 package = 'pallet-grandpa'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.im-online]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 package = 'pallet-im-online'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.indices]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 package = 'pallet-indices'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.membership]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 package = 'pallet-membership'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.offences]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 package = 'pallet-offences'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.pallet-transaction-payment-rpc-runtime-api]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.randomness-collective-flip]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 package = 'pallet-randomness-collective-flip'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.safe-mix]
 default-features = false
@@ -113,120 +99,101 @@ default-features = false
 features = ['historical']
 git = 'https://github.com/paritytech/substrate.git'
 package = 'pallet-session'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.sp-api]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.sp-authority-discovery]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 package = 'sp-authority-discovery'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.sp-consensus-babe]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '0.8'
+version = '0.8.0-alpha.3'
 
 [dependencies.sp-block-builder]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-
+version = '2.0.0-alpha.3'
 [dependencies.sp-core]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.sp-inherents]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-
+version = '2.0.0-alpha.3'
 [dependencies.sp-io]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.sp-offchain]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.sp-runtime]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.sp-session]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.sp-std]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.sp-transaction-pool]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.sp-version]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.system]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 package = 'frame-system'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.system-rpc-runtime-api]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 package = 'frame-system-rpc-runtime-api'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.timestamp]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 package = 'pallet-timestamp'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.transaction-payment]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 package = 'pallet-transaction-payment'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.vesting]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 package = 'pallet-vesting'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '2.0.0'
+version = '2.0.0-alpha.3'
 
 [dependencies.allocations]
 default-features = false
@@ -251,7 +218,6 @@ default-features = false
 version = '2.0.0'
 package = "pallet-mandate"
 git = 'https://github.com/ETeissonniere/pallet-mandate'
-rev = 'f60d4197b7dca6f52b6934f8e17deb0ad65edcf4'
 
 [features]
 default = ['std']
@@ -303,8 +269,7 @@ std = [
 [build-dependencies.wasm-builder-runner]
 git = 'https://github.com/paritytech/substrate.git'
 package = 'substrate-wasm-builder-runner'
-rev = 'efd27a538e6be0f0f077a81442c8f0547acee918'
-version = '1.0.4'
+version = '1.0.5'
 
 [package]
 authors = ['Eliott Teissonniere <git.eliott@teissonniere.org>']
