update node to last breaking changes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ package = 'substrate-build-script-utils'
 version = '2.0.0-alpha.3'
 
 [dependencies]
-futures = '0.3.1'
+futures = { version = "0.3.1", features = ["compat"] }
 hex-literal = "0.2.1"
 log = '0.4.8'
 parking_lot = '0.9.0'
@@ -77,6 +77,9 @@ version = '2.0.0-alpha.3'
 version = '0.8.0-alpha.3'
 
 [dependencies.sc-consensus-babe]
+version = '0.8.0-alpha.3'
+
+[dev-dependencies.sc-consensus-epochs]
 version = '0.8.0-alpha.3'
 
 [dependencies.sc-executor]
