--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -42,6 +42,7 @@ std = [
     'system-rpc-runtime-api/std',
     'timestamp/std',
     'transaction-payment/std',
+    'utility/std',
     'vesting/std',
 
     'allocations/std',
@@ -209,6 +210,11 @@ version = '2.0.0-alpha.3'
 [dependencies.transaction-payment]
 default-features = false
 package = 'pallet-transaction-payment'
+version = '2.0.0-alpha.3'
+
+[dependencies.utility]
+default-features = false
+package = 'pallet-utility'
 version = '2.0.0-alpha.3'
 
 [dependencies.vesting]
