--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ['Eliott Teissonniere <git.eliott@teissonniere.org>']
 build = 'build.rs'
 edition = '2018'
 name = 'nodle-chain'
-version = '2.0.1'
+version = '2.0.0-alpha.5'
 
 [build-dependencies]
 vergen = '3.0.4'
