--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -45,7 +45,6 @@ std = [
     'utility/std',
     'vesting/std',
 
-    'allocations/std',
     'poa/std',
     'reserve/std',
 
@@ -222,12 +221,6 @@ default-features = false
 package = 'pallet-vesting'
 version = '2.0.0-alpha.5'
 
-[dependencies.allocations]
-default-features = false
-version = '2.0.0'
-package = "pallet-allocations"
-path = "../pallets/allocations"
-
 [dependencies.poa]
 default-features = false
 version = '2.0.0'
@@ -236,7 +229,7 @@ path = "../pallets/poa"
 
 [dependencies.reserve]
 default-features = false
-version = '2.0.0'
+version = '2.0.0-alpha.6'
 package = "pallet-reserve"
 path = "../pallets/reserve"
 
