--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -223,7 +223,7 @@ version = '2.0.0-alpha.5'
 
 [dependencies.poa]
 default-features = false
-version = '2.0.0'
+version = '2.0.0-alpha.6'
 package = "pallet-poa"
 path = "../pallets/poa"
 
