--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -54,22 +54,22 @@ std = [
 [dependencies.authority-discovery]
 default-features = false
 package = 'pallet-authority-discovery'
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.authorship]
 default-features = false
 package = 'pallet-authorship'
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.babe]
 default-features = false
 package = 'pallet-babe'
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.balances]
 default-features = false
 package = 'pallet-balances'
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.codec]
 default-features = false
@@ -80,49 +80,49 @@ version = '1.2.0'
 [dependencies.collective]
 default-features = false
 package = 'pallet-collective'
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.frame-executive]
 default-features = false
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.frame-support]
 default-features = false
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.grandpa]
 default-features = false
 package = 'pallet-grandpa'
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.im-online]
 default-features = false
 package = 'pallet-im-online'
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.indices]
 default-features = false
 package = 'pallet-indices'
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.membership]
 default-features = false
 package = 'pallet-membership'
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.offences]
 default-features = false
 package = 'pallet-offences'
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.pallet-transaction-payment-rpc-runtime-api]
 default-features = false
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.randomness-collective-flip]
 default-features = false
 package = 'pallet-randomness-collective-flip'
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.safe-mix]
 default-features = false
@@ -137,89 +137,89 @@ version = '1.0.101'
 default-features = false
 features = ['historical']
 package = 'pallet-session'
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.sp-api]
 default-features = false
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.sp-authority-discovery]
 default-features = false
 package = 'sp-authority-discovery'
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.sp-consensus-babe]
 default-features = false
-version = '0.8.0-alpha.5'
+version = '0.8.0-alpha.6'
 
 [dependencies.sp-block-builder]
 default-features = false
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 [dependencies.sp-core]
 default-features = false
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.sp-inherents]
 default-features = false
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.sp-io]
 default-features = false
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.sp-offchain]
 default-features = false
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.sp-runtime]
 default-features = false
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.sp-session]
 default-features = false
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.sp-std]
 default-features = false
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.sp-transaction-pool]
 default-features = false
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.sp-version]
 default-features = false
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.system]
 default-features = false
 package = 'frame-system'
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.system-rpc-runtime-api]
 default-features = false
 package = 'frame-system-rpc-runtime-api'
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.timestamp]
 default-features = false
 package = 'pallet-timestamp'
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.transaction-payment]
 default-features = false
 package = 'pallet-transaction-payment'
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.utility]
 default-features = false
 package = 'pallet-utility'
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.vesting]
 default-features = false
 package = 'pallet-vesting'
-version = '2.0.0-alpha.5'
+version = '2.0.0-alpha.6'
 
 [dependencies.poa]
 default-features = false
@@ -235,7 +235,7 @@ path = "../pallets/reserve"
 
 [dependencies.mandate]
 default-features = false
-version = '2.0.0-alpha.5'
+version = '2.0.1'
 package = "pallet-mandate"
 
 [build-dependencies.wasm-builder-runner]
