add benchmark support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,11 @@ version = '3.1.3'
 default-features = false
 version = '2.0.0-alpha.6'
 
+[dependencies.frame-benchmarking-cli]
+default-features = false
+version = '2.0.0-alpha.6'
+optional = true
+
 [dependencies.futures01]
 package = 'futures'
 version = '0.1.29'
@@ -54,7 +59,7 @@ version = '2.0.0-alpha.6'
 
 [dependencies.nodle-chain-runtime]
 path = 'runtime'
-version = '2.0.0'
+version = '2.0.0-alpha.6'
 
 [dependencies.sc-authority-discovery]
 version = '0.8.0-alpha.6'
@@ -126,6 +131,13 @@ members = [
 	'pallets/reserve',
 	'runtime'
 ]
+
+[features]
+runtime-benchmarks = [
+	"nodle-chain-runtime/runtime-benchmarks",
+	"frame-benchmarking-cli",
+]
+
 
 [[bin]]
 name = 'nodle-chain'
