--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -2,7 +2,7 @@
 authors = ['Eliott Teissonniere <git.eliott@teissonniere.org>']
 edition = '2018'
 name = 'nodle-chain-runtime'
-version = '2.0.0'
+version = '2.0.0-alpha.6'
 
 [features]
 default = ['std']
@@ -50,6 +50,18 @@ std = [
 
     'mandate/std',
 ]
+runtime-benchmarks = [
+    "frame-benchmarking",
+    "frame-support/runtime-benchmarks",
+    "system/runtime-benchmarks",
+    "sp-runtime/runtime-benchmarks",
+    "balances/runtime-benchmarks",
+    "collective/runtime-benchmarks",
+    "im-online/runtime-benchmarks",
+    "timestamp/runtime-benchmarks",
+    "utility/runtime-benchmarks",
+    "vesting/runtime-benchmarks",
+]
 
 [dependencies.authority-discovery]
 default-features = false
@@ -81,6 +93,11 @@ version = '1.2.0'
 default-features = false
 package = 'pallet-collective'
 version = '2.0.0-alpha.6'
+
+[dependencies.frame-benchmarking]
+default-features = false
+version = '2.0.0-alpha.6'
+optional = true
 
 [dependencies.frame-executive]
 default-features = false
