--- a/pallets/reserve/Cargo.toml
+++ b/pallets/reserve/Cargo.toml
@@ -14,7 +14,11 @@ std = [
     'sp-runtime/std',
     'sp-io/std',
     'sp-std/std',
-    'system/std',
+    'frame-system/std',
+]
+runtime-benchmarks = [
+	"frame-benchmarking",
+	"frame-support/runtime-benchmarks",
 ]
 
 [dependencies.serde]
@@ -32,6 +36,11 @@ default-features = false
 features = ['derive']
 package = 'parity-scale-codec'
 version = '1.2.0'
+
+[dependencies.frame-benchmarking]
+default-features = false
+version = '2.0.0-alpha.6'
+optional = true
 
 [dependencies.frame-support]
 default-features = false
@@ -53,7 +62,6 @@ version = '2.0.0-alpha.6'
 default-features = false
 version = '2.0.0-alpha.6'
 
-[dependencies.system]
+[dependencies.frame-system]
 default-features = false
-package = 'frame-system'
 version = '2.0.0-alpha.6'
