expose reserve benchmarks

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -61,6 +61,8 @@ runtime-benchmarks = [
     "timestamp/runtime-benchmarks",
     "utility/runtime-benchmarks",
     "vesting/runtime-benchmarks",
+
+    'reserve/runtime-benchmarks',
 ]
 
 [dependencies.authority-discovery]
