add social key recovery module

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -20,6 +20,7 @@ std = [
     'indices/std',
     'membership/std',
     'offences/std',
+    'pallet-recovery/std',
     'pallet-transaction-payment-rpc-runtime-api/std',
     'randomness-collective-flip/std',
     'safe-mix/std',
@@ -132,6 +133,10 @@ version = '2.0.0-alpha.6'
 [dependencies.offences]
 default-features = false
 package = 'pallet-offences'
+version = '2.0.0-alpha.6'
+
+[dependencies.pallet-recovery]
+default-features = false
 version = '2.0.0-alpha.6'
 
 [dependencies.pallet-transaction-payment-rpc-runtime-api]
