add identity module

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -20,6 +20,7 @@ std = [
     'indices/std',
     'membership/std',
     'offences/std',
+    'pallet-identity/std',
     'pallet-recovery/std',
     'pallet-transaction-payment-rpc-runtime-api/std',
     'randomness-collective-flip/std',
@@ -62,6 +63,7 @@ runtime-benchmarks = [
     "timestamp/runtime-benchmarks",
     "utility/runtime-benchmarks",
     "vesting/runtime-benchmarks",
+    "pallet-identity/runtime-benchmarks",
 
     'reserve/runtime-benchmarks',
 ]
@@ -133,6 +135,10 @@ version = '2.0.0-alpha.6'
 [dependencies.offences]
 default-features = false
 package = 'pallet-offences'
+version = '2.0.0-alpha.6'
+
+[dependencies.pallet-identity]
+default-features = false
 version = '2.0.0-alpha.6'
 
 [dependencies.pallet-recovery]
