--- a/pallets/emergency-shutdown/Cargo.toml
+++ b/pallets/emergency-shutdown/Cargo.toml
@@ -13,7 +13,7 @@ std = [
     "serde",
     "sp-io/std",
     "sp-runtime/std",
-    #"sp-std/std",
+    "sp-std/std",
 ]
 runtime-benchmarks = [
 	"frame-benchmarking",
@@ -29,7 +29,7 @@ parity-scale-codec = { version = "1.2.0", default-features = false, features = [
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
 sp-io = { version = "2.0.0-alpha.6", default-features = false }
 sp-runtime = { version = "2.0.0-alpha.6", default-features = false }
-#sp-std = { version = "2.0.0-alpha.6", default-features = false }
+sp-std = { version = "2.0.0-alpha.6", default-features = false }
 
 
 [dev-dependencies]
