test on nightly and stable

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,6 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
+        toolchain: [nightly, stable]
 
     steps:
     - uses: actions/checkout@v2
@@ -31,11 +32,19 @@ jobs:
         path: target
         key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
 
-    - name: Toolchain
-      run: ./scripts/init.sh
+    - name: Install ${{ matrix.toolchain }} toolchain
+      uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: ${{ matrix.toolchain }}
+        override: true
+        components: rustfmt
 
     - name: Run tests
-      run: cargo test --all-targets --all-features --workspace
+      uses: actions-rs/cargo@v1
+      with:
+        command: test
+        args: --all-targets --all-features --workspace
 
   lints:
     runs-on: ubuntu-latest
@@ -46,10 +55,10 @@ jobs:
     - name: Install stable toolchain
       uses: actions-rs/toolchain@v1
       with:
-          profile: minimal
-          toolchain: stable
-          override: true
-          components: rustfmt
+        profile: minimal
+        toolchain: stable
+        override: true
+        components: rustfmt
 
     - name: Run cargo fmt
       uses: actions-rs/cargo@v1
