--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -2,13 +2,15 @@ name: Security audit
 
 on:
   schedule:
-    - cron: '0 0 0 * *'
+  - cron: '0 * * * *'
+  
   push:
     paths:
-      - '**/Cargo.toml'
-      - '**/Cargo.lock'
-      - 'pallets/**/Cargo.toml'
-      - 'pallets/**/Cargo.lock'
+    - '**/Cargo.toml'
+    - '**/Cargo.lock'
+    - 'pallets/**/Cargo.toml'
+    - 'pallets/**/Cargo.lock'
+  
   pull_request:
 
 jobs:
