add wasm toolchain

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -40,6 +40,13 @@ jobs:
         override: true
         components: rustfmt
 
+    - name: Install WASM toolchain
+      uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: nightly
+        target: wasm32-unknown-unknown
+
     - name: Run tests
       uses: actions-rs/cargo@v1
       with:
