re-enable audit on PR

--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -11,6 +11,8 @@ on:
     - 'pallets/**/Cargo.toml'
     - 'pallets/**/Cargo.lock'
 
+  pull_request:
+
 jobs:
   audit:
     runs-on: ubuntu-latest
