--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,6 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
+        toolchain: [nightly, stable]
 
     steps:
     - uses: actions/checkout@v2
@@ -31,11 +32,25 @@ jobs:
         path: target
         key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
 
-    - name: Install toolchain
-      run: ./scripts/init.sh
+    - name: Install ${{ matrix.toolchain }} toolchain
+      uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: ${{ matrix.toolchain }}
+        override: true
+
+    - name: Install WASM toolchain
+      uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: nightly
+        target: wasm32-unknown-unknown
 
     - name: Run tests
-      run: cargo test --all-targets --all-features --workspace
+      uses: actions-rs/cargo@v1
+      with:
+        command: test
+        args: --all-targets --all-features --workspace
 
   lints:
     runs-on: ubuntu-latest
