install native packages

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -46,6 +46,14 @@ jobs:
         toolchain: nightly
         target: wasm32-unknown-unknown
 
+    - name: Install ubuntu native dependencies
+      if: matrix.os == 'ubuntu-latest'
+      run: sudo apt install -y cmake pkg-config libssl-dev git gcc build-essential clang libclang-dev
+
+    - name: Install mac os native dependencies
+      if: matrix.os == 'macos-latest'
+      run: brew install openssl cmake llvm
+
     - name: Run tests
       uses: actions-rs/cargo@v1
       with:
