--- a/.github/workflows/github_package_registry.yml
+++ b/.github/workflows/github_package_registry.yml
@@ -1,9 +1,8 @@
-name: Create node docker image
+name: Create docker image
 
 on:
-  push:
-    branches:
-      - master
+  release:
+    types: [published]
 
 jobs:
   build:
