attempt to save space by not testing against the stable toolchain

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        toolchain: [nightly, stable]
+        toolchain: [nightly]
 
     steps:
     - uses: actions/checkout@v2
