keep it simple, run audits all the times

--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -1,12 +1,6 @@
 name: Security audit
 
-on:  
-  push:
-    paths:
-    - '**/Cargo.toml'
-    - '**/Cargo.lock'
-    - 'pallets/**/Cargo.toml'
-    - 'pallets/**/Cargo.lock'
+on: [push]
 
 jobs:
   audit:
