apt clean ubuntu

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,6 +23,10 @@ jobs:
       if: matrix.os == 'ubuntu-latest'
       run: sudo apt install -y cmake pkg-config libssl-dev git gcc build-essential clang libclang-dev
 
+    - name: Cleanup ubuntu filesystem
+      if: matrix.os == 'ubuntu-latest'
+      run: sudo apt clean
+
     - name: Install mac os native dependencies
       if: matrix.os == 'macos-latest'
       run: brew install openssl cmake llvm
