--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,10 +35,7 @@ jobs:
       run: ./scripts/init.sh
 
     - name: Run tests
-      uses: actions-rs/cargo@v1
-      with:
-        command: test
-        args: --all-targets --all-features --workspace
+      run: cargo test --all-targets --all-features --workspace
 
   fmt:
     runs-on: ubuntu-latest
