--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,8 +16,8 @@ jobs:
     - name: Cache cargo build
       uses: actions/cache@v1
       with:
-        path: target
-        key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
+        path: ~/.sccache-build
+        key: ${{ runner.os }}-sccache
 
     - name: Install ubuntu native dependencies
       if: matrix.os == 'ubuntu-latest'
@@ -34,8 +34,15 @@ jobs:
     - name: Setup toolchain
       run: ./scripts/init.sh
 
+    - name: Install sccache
+      run: cargo install sccache
+
     - name: Run tests
       run: cargo test --all-targets --all-features --workspace
+      env:
+        RUSTC_WRAPPER: sccache
+        SCCACHE_CACHE_SIZE: 5G
+        SCCACHE_DIR: ~/.sccache-build
 
   fmt:
     runs-on: ubuntu-latest
