use homebrew to install sccache when possible

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,13 +29,14 @@ jobs:
 
     - name: Install mac os native dependencies
       if: matrix.os == 'macos-latest'
-      run: brew install openssl cmake llvm
+      run: brew install openssl cmake llvm sccache
 
     - name: Setup toolchain
       run: ./scripts/init.sh
 
-    - name: Install sccache
+    - name: Install sccache from crates.io
       run: cargo install sccache
+      if: matrix.os == 'ubuntu-latest'
 
     - name: Run tests
       run: cargo test --all-targets --all-features --workspace
