--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -39,10 +39,15 @@ jobs:
       if: matrix.os == 'ubuntu-latest'
 
     - name: Run tests
-      run: cargo test --all-targets --all-features --workspace
+      run: sccache --start-server && cargo test --all-targets --all-features --workspace
       env:
         RUSTC_WRAPPER: sccache
         SCCACHE_CACHE_SIZE: 5G
+        SCCACHE_DIR: ~/.sccache-build
+
+    - name: Display cache statistics
+      run: sccache -s
+      env:
         SCCACHE_DIR: ~/.sccache-build
 
   fmt:
