--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,12 +18,19 @@ jobs:
       with: 
         path: ~/.cargo/registry 
         key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-cargo-registry-
+          ${{ runner.os }}-
+
 
     - name: Cache cargo index 
       uses: actions/cache@v1  
       with: 
         path: ~/.cargo/git  
         key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-cargo-index-
+          ${{ runner.os }}-
 
     - name: Install ubuntu native dependencies
       if: matrix.os == 'ubuntu-latest'
