restore cargo build cache

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -32,6 +32,15 @@ jobs:
           ${{ runner.os }}-cargo-index-
           ${{ runner.os }}-
 
+    - name: Cache cargo build
+      uses: actions/cache@v1
+      with:
+        path: target
+        key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-cargo-build-target-
+          ${{ runner.os }}-
+
     - name: Install ubuntu native dependencies
       if: matrix.os == 'ubuntu-latest'
       run: sudo apt install -y cmake pkg-config libssl-dev git gcc build-essential clang libclang-dev
