placeholder for session benchmarks

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -60,6 +60,7 @@ runtime-benchmarks = [
     "pallet-emergency-shutdown/runtime-benchmarks",
     "pallet-im-online/runtime-benchmarks",
     "pallet-reserve/runtime-benchmarks",
+    #"pallet-session-benchmarking",
     "pallet-identity/runtime-benchmarks",
     "pallet-timestamp/runtime-benchmarks",
     "pallet-utility/runtime-benchmarks",
@@ -91,6 +92,7 @@ pallet-randomness-collective-flip = { version = "2.0.0-alpha.6", default-feature
 pallet-recovery = { version = "2.0.0-alpha.6", default-features = false }
 pallet-reserve = { version = "2.0.0-alpha.6", default-features = false, path = "../pallets/reserve" }
 pallet-session = { version = "2.0.0-alpha.6", default-features = false, features = ["historical"] }
+#pallet-session-benchmarking = { version = "2.0.0-alpha.6", default-features = false, optional = true }
 pallet-timestamp = { version = "2.0.0-alpha.6", default-features = false }
 pallet-transaction-payment = { version = "2.0.0-alpha.6", default-features = false }
 pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0-alpha.6", default-features = false }
