placeholder for offences benchmarks

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -59,6 +59,7 @@ runtime-benchmarks = [
     "pallet-collective/runtime-benchmarks",
     "pallet-emergency-shutdown/runtime-benchmarks",
     "pallet-im-online/runtime-benchmarks",
+    #"pallet-offences-benchmarking",
     "pallet-reserve/runtime-benchmarks",
     #"pallet-session-benchmarking",
     "pallet-identity/runtime-benchmarks",
@@ -87,6 +88,7 @@ pallet-indices = { version = "2.0.0-alpha.6", default-features = false }
 pallet-mandate = { version = "2.0.1", default-features = false }
 pallet-membership = { version = "2.0.0-alpha.6", default-features = false }
 pallet-offences = { version = "2.0.0-alpha.6", default-features = false }
+#pallet-offences-benchmarking = { version = "2.0.0-alpha.6", default-features = false, optional = true }
 pallet-poa = { version = "2.0.0-alpha.6", default-features = false, path = "../pallets/poa" }
 pallet-randomness-collective-flip = { version = "2.0.0-alpha.6", default-features = false }
 pallet-recovery = { version = "2.0.0-alpha.6", default-features = false }
