don't build with --all-features for releases

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,7 +78,7 @@ jobs:
       run: ./scripts/init.sh
 
     - name: Build in release mode
-      run: cargo build -p nodle-chain --release --features runtime-benchmarks
+      run: cargo build -p nodle-chain --release
 
     - name: Upload node binary
       uses: actions/upload-release-asset@v1.0.1
