add tcr pallet to runtime

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -29,6 +29,7 @@ std = [
   "pallet-recovery/std",
   "pallet-reserve/std",
   "pallet-session/std",
+  "pallet-tcr/std",
   "pallet-timestamp/std",
   "pallet-transaction-payment/std",
   "pallet-transaction-payment-rpc-runtime-api/std",
@@ -63,6 +64,7 @@ runtime-benchmarks = [
   #"pallet-offences-benchmarking",
   "pallet-reserve/runtime-benchmarks",
   #"pallet-session-benchmarking",
+  "pallet-tcr/runtime-benchmarks",
   "pallet-timestamp/runtime-benchmarks",
   "pallet-utility/runtime-benchmarks",
   "pallet-vesting/runtime-benchmarks",
@@ -95,6 +97,7 @@ pallet-recovery = { version = "2.0.0-alpha.6", default-features = false }
 pallet-reserve = { version = "2.0.0-alpha.6", default-features = false, path = "../pallets/reserve" }
 pallet-session = { version = "2.0.0-alpha.6", default-features = false, features = ["historical"] }
 #pallet-session-benchmarking = { version = "2.0.0-alpha.6", default-features = false, optional = true }
+pallet-tcr = { version = "2.0.0-alpha.6", default-features = false, path = "../pallets/tcr" }
 pallet-timestamp = { version = "2.0.0-alpha.6", default-features = false }
 pallet-transaction-payment = { version = "2.0.0-alpha.6", default-features = false }
 pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0-alpha.6", default-features = false }
