add pallet-root-of-trust runtime code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [workspace]
 members = [
-	'node',
-	'pallets/emergency-shutdown',
-	'pallets/poa',
-	'pallets/reserve',
-	'pallets/tcr',
-	'runtime'
+	"node",
+	"pallets/emergency-shutdown",
+	"pallets/poa",
+	"pallets/reserve",
+	"pallets/root-of-trust",
+	"pallets/tcr",
+	"runtime"
 ]
 
 [profile.release]
-panic = 'unwind'
+panic = "unwind"
