add pallet-root-of-trust rpc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
 	"pallets/poa",
 	"pallets/reserve",
 	"pallets/root-of-trust",
+	"pallets/root-of-trust/rpc",
 	"pallets/root-of-trust/rpc/runtime-api",
 	"pallets/tcr",
 	"runtime"
