add root-of-trust runtime-api to runtime

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -28,7 +28,7 @@ std = [
   "pallet-randomness-collective-flip/std",
   "pallet-recovery/std",
   "pallet-reserve/std",
-  "pallet-root-of-trust/std",
+  "pallet-root-of-trust-runtime-api/std",
   "pallet-session/std",
   "pallet-tcr/std",
   "pallet-timestamp/std",
@@ -98,6 +98,7 @@ pallet-randomness-collective-flip = { version = "2.0.0-alpha.6", default-feature
 pallet-recovery = { version = "2.0.0-alpha.6", default-features = false }
 pallet-reserve = { version = "2.0.0-alpha.6", default-features = false, path = "../pallets/reserve" }
 pallet-root-of-trust = { version = "2.0.0-alpha.6", default-features = false, path = "../pallets/root-of-trust" }
+pallet-root-of-trust-runtime-api = { version = "2.0.0-alpha.6", default-features = false, path = "../pallets/root-of-trust/rpc/runtime-api" }
 pallet-session = { version = "2.0.0-alpha.6", default-features = false, features = ["historical"] }
 #pallet-session-benchmarking = { version = "2.0.0-alpha.6", default-features = false, optional = true }
 pallet-tcr = { version = "2.0.0-alpha.6", default-features = false, path = "../pallets/tcr" }
