--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -56,6 +56,7 @@ runtime-benchmarks = [
   "frame-benchmarking",
   "frame-support/runtime-benchmarks",
   "frame-system/runtime-benchmarks",
+  #"frame-system-benchmarking",
   "pallet-balances/runtime-benchmarks",
   "pallet-collective/runtime-benchmarks",
   "pallet-identity/runtime-benchmarks",
@@ -76,6 +77,7 @@ frame-benchmarking = { version = "2.0.0-alpha.7", default-features = false, opti
 frame-executive = { version = "2.0.0-alpha.7", default-features = false }
 frame-support = { version = "2.0.0-alpha.7", default-features = false }
 frame-system = { version = "2.0.0-alpha.7", default-features = false }
+#frame-system-benchmarking = { version = "2.0.0-alpha.7", default-features = false, optional = true }
 frame-system-rpc-runtime-api = { version = "2.0.0-alpha.7", default-features = false }
 pallet-authority-discovery = { version = "2.0.0-alpha.7", default-features = false }
 pallet-authorship = { version = "2.0.0-alpha.7", default-features = false }
