re-enable pallet-emergency-shutdown

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -16,6 +16,7 @@ std = [
   "pallet-babe/std",
   "pallet-balances/std",
   "pallet-collective/std",
+  "pallet-emergency-shutdown/std",
   "pallet-grandpa/std",
   "pallet-identity/std",
   "pallet-im-online/std",
@@ -59,6 +60,7 @@ runtime-benchmarks = [
   #"frame-system-benchmarking",
   "pallet-balances/runtime-benchmarks",
   "pallet-collective/runtime-benchmarks",
+  "pallet-emergency-shutdown/runtime-benchmarks",
   "pallet-identity/runtime-benchmarks",
   "pallet-im-online/runtime-benchmarks",
   #"pallet-offences-benchmarking",
@@ -84,6 +86,7 @@ pallet-authorship = { version = "2.0.0-alpha.7", default-features = false }
 pallet-babe = { version = "2.0.0-alpha.7", default-features = false }
 pallet-balances = { version = "2.0.0-alpha.7", default-features = false }
 pallet-collective = { version = "2.0.0-alpha.7", default-features = false }
+pallet-emergency-shutdown = { version = "2.0.0-alpha.7", default-features = false, path = "../pallets/emergency-shutdown" }
 pallet-grandpa = { version = "2.0.0-alpha.7", default-features = false }
 pallet-identity = { version = "2.0.0-alpha.7", default-features = false }
 pallet-im-online = { version = "2.0.0-alpha.7", default-features = false }
