re-enable wasmtime

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -10,8 +10,14 @@ name = "nodle-chain"
 path = "src/main.rs"
 
 [features]
+default = [ "wasmtime" ]
 runtime-benchmarks = [
 	"nodle-chain-runtime/runtime-benchmarks",
+]
+wasmtime = [
+	"sc-cli/wasmtime",
+	"sc-executor/wasmtime",
+	"sc-service/wasmtime",
 ]
 
 [dependencies]
