--- a/misc/bridge/functions/package.json
+++ b/misc/bridge/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "blake2s-js": "^1.3.0",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1"
   },
