--- a/misc/bridge/functions/package.json
+++ b/misc/bridge/functions/package.json
@@ -14,7 +14,8 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "blake2s-js": "^1.3.0",
+    "@types/blake2": "^4.0.0",
+    "blake2": "^4.0.1",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1"
   },
