--- a/misc/bridge/functions/package.json
+++ b/misc/bridge/functions/package.json
@@ -17,7 +17,8 @@
     "@types/blake2": "^4.0.0",
     "blake2": "^4.0.1",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-functions": "^3.6.1",
+    "stellar-sdk": "^5.0.2"
   },
   "devDependencies": {
     "tslint": "^5.12.0",
