txs to nodle chain

--- a/misc/bridge/functions/package.json
+++ b/misc/bridge/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@polkadot/api": "^1.15.1",
     "@types/blake2": "^4.0.0",
     "blake2": "^4.0.1",
     "firebase-admin": "^8.10.0",
