--- a/pallets/amendments/Cargo.toml
+++ b/pallets/amendments/Cargo.toml
@@ -17,8 +17,14 @@ std = [
   "sp-runtime/std",
   "sp-std/std",
 ]
+runtime-benchmarks = [
+	"frame-benchmarking",
+  "frame-system/runtime-benchmarks",
+	"frame-support/runtime-benchmarks",
+]
 
 [dependencies]
+frame-benchmarking = { version = "2.0.0-rc2", default-features = false, optional = true }
 frame-support = { version = "2.0.0-rc2", default-features = false }
 frame-system = { version = "2.0.0-rc2", default-features = false }
 pallet-scheduler = { version = "2.0.0-rc2", default-features = false }
