basic allocations pallet structure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
 	"node",
+	"pallets/allocations",
 	"pallets/amendments",
 	"pallets/emergency-shutdown",
 	"pallets/poa",
