--- a/pallets/allocations/Cargo.toml
+++ b/pallets/allocations/Cargo.toml
@@ -11,6 +11,7 @@ std = [
   "frame-support/std",
   "frame-system/std",
   "pallet-balances/std",
+  "pallet-emergency-shutdown/std",
   "parity-scale-codec/std",
   "serde",
   "sp-io/std",
@@ -28,6 +29,7 @@ frame-benchmarking = { version = "2.0.0-rc2", default-features = false, optional
 frame-support = { version = "2.0.0-rc2", default-features = false }
 frame-system = { version = "2.0.0-rc2", default-features = false }
 pallet-balances = { version = "2.0.0-rc2", default-features = false }
+pallet-emergency-shutdown = { version = "2.0.0-rc2", default-features = false, path = "../emergency-shutdown" }
 parity-scale-codec = { version = "1.2.0", default-features = false, features = ["derive"] }
 serde = { version = "1.0.110", optional = true, features = ["derive"] }
 sp-io = { version = "2.0.0-rc2", default-features = false }
