--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ members = [
 	"pallets/root-of-trust/rpc",
 	"pallets/root-of-trust/rpc/runtime-api",
 	"pallets/tcr",
-	"runtime"
+	"runtime",
+	"support"
 ]
 
 [profile.release]
