--- a/pallets/reserve/Cargo.toml
+++ b/pallets/reserve/Cargo.toml
@@ -26,6 +26,7 @@ runtime-benchmarks = [
 frame-benchmarking = { version = "2.0.0-rc2", default-features = false, optional = true }
 frame-support = { version = "2.0.0-rc2", default-features = false }
 frame-system = { version = "2.0.0-rc2", default-features = false }
+nodle-support = { version = "2.0.0-rc2", path = "../../support" }
 pallet-balances = { version = "2.0.0-rc2", default-features = false }
 parity-scale-codec = { version = "1.2.0", default-features = false, features = ["derive"] }
 serde = { version = "1.0.110", optional = true, features = ["derive"] }
