--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -20,6 +20,7 @@ std = [
   "pallet-collective/std",
   "pallet-emergency-shutdown/std",
   "pallet-grandpa/std",
+  "pallet-grants/std",
   "pallet-identity/std",
   "pallet-im-online/std",
   "pallet-indices/std",
@@ -97,6 +98,7 @@ pallet-balances = { version = "2.0.0-rc2", default-features = false }
 pallet-collective = { version = "2.0.0-rc2", default-features = false }
 pallet-emergency-shutdown = { version = "2.0.0-rc2", default-features = false, path = "../pallets/emergency-shutdown" }
 pallet-grandpa = { version = "2.0.0-rc2", default-features = false }
+pallet-grants = { version = "2.0.0-rc2", default-features = false, path = "../pallets/grants" }
 pallet-identity = { version = "2.0.0-rc2", default-features = false }
 pallet-im-online = { version = "2.0.0-rc2", default-features = false }
 pallet-indices = { version = "2.0.0-rc2", default-features = false }
