benchmarks for grants

--- a/pallets/grants/Cargo.toml
+++ b/pallets/grants/Cargo.toml
@@ -17,9 +17,14 @@ std = [
 	"sp-std/std",
 	"sp-io/std",
 ]
-
+runtime-benchmarks = [
+	"frame-benchmarking",
+  "frame-system/runtime-benchmarks",
+	"frame-support/runtime-benchmarks",
+]
 
 [dependencies]
+frame-benchmarking = { version = "2.0.0-rc2", default-features = false, optional = true }
 frame-support = { version = "2.0.0-rc2", default-features = false }
 frame-system = { version = "2.0.0-rc2", default-features = false }
 serde = { version = "1.0.110", optional = true }
