--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -62,14 +62,17 @@ runtime-benchmarks = [
   "frame-benchmarking",
   "frame-support/runtime-benchmarks",
   "frame-system/runtime-benchmarks",
-  #"frame-system-benchmarking",
+  "frame-system-benchmarking",
   "pallet-allocations/runtime-benchmarks",
   "pallet-amendments/runtime-benchmarks",
+  "pallet-babe/runtime-benchmarks",
   "pallet-balances/runtime-benchmarks",
   "pallet-collective/runtime-benchmarks",
   "pallet-emergency-shutdown/runtime-benchmarks",
+  "pallet-grandpa/runtime-benchmarks",
   "pallet-grants/runtime-benchmarks",
   "pallet-identity/runtime-benchmarks",
+  "pallet-indices/runtime-benchmarks",
   "pallet-im-online/runtime-benchmarks",
   #"pallet-offences-benchmarking",
   "pallet-reserve/runtime-benchmarks",
@@ -87,7 +90,7 @@ frame-benchmarking = { version = "2.0.0-rc5", default-features = false, optional
 frame-executive = { version = "2.0.0-rc5", default-features = false }
 frame-support = { version = "2.0.0-rc5", default-features = false }
 frame-system = { version = "2.0.0-rc5", default-features = false }
-#frame-system-benchmarking = { version = "2.0.0-rc5", default-features = false, optional = true }
+frame-system-benchmarking = { version = "2.0.0-rc5", default-features = false, optional = true }
 frame-system-rpc-runtime-api = { version = "2.0.0-rc5", default-features = false }
 pallet-allocations = { version = "2.0.0-rc5", default-features = false, path = "../pallets/allocations" }
 pallet-amendments = { version = "2.0.0-rc5", default-features = false, path = "../pallets/amendments" }
