--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -28,6 +28,7 @@ std = [
   "pallet-membership/std",
   "pallet-offences/std",
   "pallet-poa/std",
+  "pallet-proxy/std",
   "pallet-randomness-collective-flip/std",
   "pallet-recovery/std",
   "pallet-reserve/std",
@@ -75,6 +76,7 @@ runtime-benchmarks = [
   "pallet-indices/runtime-benchmarks",
   "pallet-im-online/runtime-benchmarks",
   #"pallet-offences-benchmarking",
+  "pallet-proxy/runtime-benchmarks",
   "pallet-reserve/runtime-benchmarks",
   "pallet-root-of-trust/runtime-benchmarks",
   "pallet-scheduler/runtime-benchmarks",
@@ -110,6 +112,7 @@ pallet-membership = { version = "2.0.0-rc5", default-features = false }
 pallet-offences = { version = "2.0.0-rc5", default-features = false }
 #pallet-offences-benchmarking = { version = "2.0.0-rc5", default-features = false, optional = true }
 pallet-poa = { version = "2.0.0-rc5", default-features = false, path = "../pallets/poa" }
+pallet-proxy = { version = "2.0.0-rc5", default-features = false }
 pallet-randomness-collective-flip = { version = "2.0.0-rc5", default-features = false }
 pallet-recovery = { version = "2.0.0-rc5", default-features = false }
 pallet-reserve = { version = "2.0.0-rc5", default-features = false, path = "../pallets/reserve" }
