--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -26,6 +26,7 @@ std = [
   "pallet-indices/std",
   "pallet-mandate/std",
   "pallet-membership/std",
+  "pallet-multisig/std",
   "pallet-offences/std",
   "pallet-poa/std",
   "pallet-proxy/std",
@@ -75,6 +76,7 @@ runtime-benchmarks = [
   "pallet-identity/runtime-benchmarks",
   "pallet-indices/runtime-benchmarks",
   "pallet-im-online/runtime-benchmarks",
+  "pallet-multisig/runtime-benchmarks",
   #"pallet-offences-benchmarking",
   "pallet-proxy/runtime-benchmarks",
   "pallet-reserve/runtime-benchmarks",
@@ -109,6 +111,7 @@ pallet-im-online = { version = "2.0.0-rc5", default-features = false }
 pallet-indices = { version = "2.0.0-rc5", default-features = false }
 pallet-mandate = { version = "2.0.5", default-features = false }
 pallet-membership = { version = "2.0.0-rc5", default-features = false }
+pallet-multisig = { version = "2.0.0-rc5", default-features = false }
 pallet-offences = { version = "2.0.0-rc5", default-features = false }
 #pallet-offences-benchmarking = { version = "2.0.0-rc5", default-features = false, optional = true }
 pallet-poa = { version = "2.0.0-rc5", default-features = false, path = "../pallets/poa" }
