--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -109,7 +109,7 @@ pallet-grants = { version = "2.0.0-rc6", default-features = false, path = "../pa
 pallet-identity = { version = "2.0.0-rc6", default-features = false }
 pallet-im-online = { version = "2.0.0-rc6", default-features = false }
 pallet-indices = { version = "2.0.0-rc6", default-features = false }
-pallet-mandate = { version = "2.0.5", default-features = false }
+pallet-mandate = { version = "2.0.6-rc6", default-features = false }
 pallet-membership = { version = "2.0.0-rc6", default-features = false }
 pallet-multisig = { version = "2.0.0-rc6", default-features = false }
 pallet-offences = { version = "2.0.0-rc6", default-features = false }
