--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -139,7 +139,7 @@ serde = { version = "1.0.110", optional = true, features = ["derive"] }
 sp-api = { version = "2.0.0", default-features = false }
 sp-application-crypto = { version = "2.0.0", default-features = false }
 sp-authority-discovery = { version = "2.0.0", default-features = false }
-sp-consensus-babe = { version = "0.8.0-rc6", default-features = false }
+sp-consensus-babe = { version = "0.8.0", default-features = false }
 sp-block-builder = { version = "2.0.0", default-features = false }
 sp-core = { version = "2.0.0", default-features = false }
 sp-inherents = { version = "2.0.0", default-features = false }
