create patch to work with substrate's prometheus code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,13 @@ members = [
 	"pallets/root-of-trust/rpc/runtime-api",
 	"pallets/tcr",
 	"primitives",
+	"prometheus",
 	"runtime",
-	"support"
+	"support",
 ]
+
+[patch.crates-io]
+substrate-prometheus-endpoint = { path = "./prometheus" }
 
 [profile.release]
 # Substrate runtime requires unwind apparently, and anyways it gives more useful
