reprogram dependencies to use the rococo v1 branch

--- a/pallets/root-of-trust/rpc/runtime-api/Cargo.toml
+++ b/pallets/root-of-trust/rpc/runtime-api/Cargo.toml
@@ -12,5 +12,5 @@ std = [
 ]
 
 [dependencies]
-parity-scale-codec = { version = "1.3.5", default_features = false }
-sp-api = { version = "2.0.0", default_features = false }
+parity-scale-codec = { version = "1.3.6", default_features = false }
+sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default_features = false }
