--- a/executor/Cargo.toml
+++ b/executor/Cargo.toml
@@ -5,16 +5,16 @@ authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
 edition = "2018"
 
 [dependencies]
-parity-scale-codec = "1.3.5"
-nodle-chain-primitives = { version = "2.0.0", path = "../primitives" }
-nodle-chain-runtime = { version = "2.0.0", path = "../runtime" }
-sc-executor = "0.8.0"
-sp-core = "2.0.0"
-sp-io = "2.0.0"
-sp-state-machine = "0.8.0"
-sp-trie = "2.0.0"
+parity-scale-codec = "1.3.6"
+nodle-chain-primitives = { path = "../primitives" }
+nodle-chain-runtime = { path = "../runtime" }
+sc-executor = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-trie = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 trie-root = "0.16.0"
-frame-benchmarking = "2.0.0"
+frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 
 [features]
 wasmtime = [
