--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -24,53 +24,53 @@ cli = [
 wasm-opt = false
 
 [target.'cfg(target_arch="x86_64")'.dependencies]
-nodle-chain-executor = { version = "2.0.0", path = "../executor", features = [ "wasmtime" ] }
-sc-cli = { version = "0.8.0", features = [ "wasmtime" ] }
-sc-service = { version = "0.8.0", default-features = false, features = [ "wasmtime" ] }
-sp-trie = { version = "2.0.0", default-features = false, features = ["memory-tracker"] }
+nodle-chain-executor = { path = "../executor", features = [ "wasmtime" ] }
+sc-cli = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", features = [ "wasmtime" ] }
+sc-service = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, features = [ "wasmtime" ] }
+sp-trie = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, features = ["memory-tracker"] }
 
 [dependencies]
-frame-benchmarking = { version = "2.0.0", default-features = false }
-frame-benchmarking-cli = { version = "2.0.0", default-features = false }
+frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 futures = { version = "0.3.1", features = ["compat"] }
 jsonrpc-core = "15.0.0"
 jsonrpc-pubsub = "15.0.0"
-nodle-chain-executor = { version = "2.0.0", path = "../executor" }
-nodle-chain-primitives = { version = "2.0.0", path = "../primitives" }
-nodle-chain-runtime = { version = "2.0.0", path = "../runtime" }
-pallet-im-online = { version = "2.0.0", default-features = false }
-pallet-root-of-trust-rpc  = { version = "2.0.0", path = "../pallets/root-of-trust/rpc" }
-pallet-transaction-payment-rpc = "2.0.0"
-sc-authority-discovery = "0.8.0"
-sc-basic-authorship = "0.8.0"
-sc-cli = "0.8.0"
-sc-client-api = "2.0.0"
-sc-consensus = "0.8.0"
-sc-consensus-babe = "0.8.0"
-sc-consensus-babe-rpc = "0.8.0"
-sc-consensus-epochs = "0.8.0"
-sc-finality-grandpa = "0.8.0"
-sc-finality-grandpa-rpc = "0.8.0"
-sc-keystore = "2.0.0"
-sc-network = "0.8.0"
-sc-rpc = "2.0.0"
-sc-rpc-api = "0.8.0"
-sc-service = "0.8.0"
-sc-transaction-pool = "2.0.0"
-sp-api = "2.0.0"
-sp-authority-discovery = "2.0.0"
-sp-blockchain = "2.0.0"
-sp-block-builder = "2.0.0"
-sp-consensus = "0.8.0"
-sp-consensus-babe = "0.8.0"
-sp-core = "2.0.0"
-sp-finality-grandpa = "2.0.0"
-sp-inherents = "2.0.0"
-sp-runtime = "2.0.0"
-sp-transaction-pool = "2.0.0"
+nodle-chain-executor = { path = "../executor" }
+nodle-chain-primitives = { path = "../primitives" }
+nodle-chain-runtime = { path = "../runtime" }
+pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+pallet-root-of-trust-rpc  = { path = "../pallets/root-of-trust/rpc" }
+pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-cli = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-network = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-service = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 structopt = "0.3.14"
-substrate-frame-rpc-system = "2.0.0"
+substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 
 [build-dependencies]
 vergen = "3.0.4"
-substrate-build-script-utils = "2.0.0"
+substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
