--- a/pallets/grants/Cargo.toml
+++ b/pallets/grants/Cargo.toml
@@ -24,15 +24,15 @@ runtime-benchmarks = [
 ]
 
 [dependencies]
-frame-benchmarking = { version = "2.0.0", default-features = false, optional = true }
-frame-support = { version = "2.0.0", default-features = false }
-frame-system = { version = "2.0.0", default-features = false }
-parity-scale-codec = { version = "1.3.5", default-features = false }
+frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, optional = true }
+frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+parity-scale-codec = { version = "1.3.6", default-features = false }
 serde = { version = "1.0.116", optional = true }
-sp-runtime = { version = "2.0.0", default-features = false }
-sp-io = { version = "2.0.0", default-features = false }
-sp-std = { version = "2.0.0", default-features = false }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 
 [dev-dependencies]
-pallet-balances = { version = "2.0.0" }
-sp-core = { version = "2.0.0", default-features = false }
+pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
