--- a/pallets/poa/Cargo.toml
+++ b/pallets/poa/Cargo.toml
@@ -17,13 +17,13 @@ std = [
 ]
 
 [dependencies]
-frame-support = { version = "2.0.0", default-features = false }
-parity-scale-codec = { version = "1.3.5", features = ["derive"], default-features = false }
-pallet-session = { version = "2.0.0", default-features = false, features = ["historical"] }
-sp-io = { version = "2.0.0", default-features = false }
-sp-runtime = { version = "2.0.0", default-features = false }
-sp-std = { version = "2.0.0", default-features = false }
-frame-system = { version = "2.0.0", default-features = false }
+frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+parity-scale-codec = { version = "1.3.6", features = ["derive"], default-features = false }
+pallet-session = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, features = ["historical"] }
+sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 
 [dev-dependencies]
-sp-core = { version = "2.0.0", default-features = false }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
