--- a/pallets/root-of-trust/rpc/Cargo.toml
+++ b/pallets/root-of-trust/rpc/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2018"
 jsonrpc-core = "15.0.0"
 jsonrpc-core-client = "15.0.0"
 jsonrpc-derive = "15.0.0"
-pallet-root-of-trust-runtime-api = { version = "2.0.0", path = "./runtime-api" }
-parity-scale-codec = { version = "1.3.5", default_features = false }
-sp-api = { version = "2.0.0", default_features = false }
-sp-blockchain = { version = "2.0.0", default_features = false }
-sp-runtime = { version = "2.0.0", default_features = false }
+pallet-root-of-trust-runtime-api = { path = "./runtime-api" }
+parity-scale-codec = { version = "1.3.6", default_features = false }
+sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default_features = false }
+sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default_features = false }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default_features = false }
