--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -5,11 +5,11 @@ authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
 edition = "2018"
 
 [dependencies]
-frame-system = { version = "2.0.0", default-features = false }
-parity-scale-codec = { version = "1.3.5", default-features = false, features = ["derive"] }
-sp-application-crypto = { version = "2.0.0", default-features = false }
-sp-core = { version = "2.0.0", default-features = false }
-sp-runtime = { version = "2.0.0", default-features = false }
+frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+parity-scale-codec = { version = "1.3.6", default-features = false, features = ["derive"] }
+sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 
 [features]
 default = ["std"]
