--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -20,7 +20,6 @@ std = [
   "pallet-balances/std",
   "pallet-collective/std",
   "pallet-emergency-shutdown/std",
-  "pallet-finality-tracker/std",
   "pallet-grandpa/std",
   "pallet-grants/std",
   "pallet-identity/std",
@@ -92,64 +91,63 @@ runtime-benchmarks = [
 ]
 
 [dependencies]
-frame-benchmarking = { version = "2.0.0", default-features = false, optional = true }
-frame-executive = { version = "2.0.0", default-features = false }
-frame-support = { version = "2.0.0", default-features = false }
-frame-system = { version = "2.0.0", default-features = false }
-frame-system-benchmarking = { version = "2.0.0", default-features = false, optional = true }
-frame-system-rpc-runtime-api = { version = "2.0.0", default-features = false }
-nodle-chain-primitives = { version = "2.0.0", default-features = false, path = "../primitives" }
-pallet-allocations = { version = "2.0.0", default-features = false, path = "../pallets/allocations" }
-pallet-amendments = { version = "2.0.0", default-features = false, path = "../pallets/amendments" }
-pallet-authority-discovery = { version = "2.0.0", default-features = false }
-pallet-authorship = { version = "2.0.0", default-features = false }
-pallet-babe = { version = "2.0.0", default-features = false }
-pallet-balances = { version = "2.0.0", default-features = false }
-pallet-collective = { version = "2.0.0", default-features = false }
-pallet-emergency-shutdown = { version = "2.0.0", default-features = false, path = "../pallets/emergency-shutdown" }
-pallet-finality-tracker = { version = "2.0.0", default-features = false }
-pallet-grandpa = { version = "2.0.0", default-features = false }
-pallet-grants = { version = "2.0.0", default-features = false, path = "../pallets/grants" }
-pallet-identity = { version = "2.0.0", default-features = false }
-pallet-im-online = { version = "2.0.0", default-features = false }
-pallet-indices = { version = "2.0.0", default-features = false }
-pallet-mandate = { version = "2.0.7", default-features = false }
-pallet-membership = { version = "2.0.0", default-features = false }
-pallet-multisig = { version = "2.0.0", default-features = false }
-pallet-offences = { version = "2.0.0", default-features = false }
-#pallet-offences-benchmarking = { version = "2.0.0", default-features = false, optional = true }
-pallet-poa = { version = "2.0.0", default-features = false, path = "../pallets/poa" }
-pallet-proxy = { version = "2.0.0", default-features = false }
-pallet-randomness-collective-flip = { version = "2.0.0", default-features = false }
-pallet-recovery = { version = "2.0.0", default-features = false }
-pallet-reserve = { version = "2.0.0", default-features = false, path = "../pallets/reserve" }
-pallet-root-of-trust = { version = "2.0.0", default-features = false, path = "../pallets/root-of-trust" }
-pallet-root-of-trust-runtime-api = { version = "2.0.0", default-features = false, path = "../pallets/root-of-trust/rpc/runtime-api" }
-pallet-scheduler = { version = "2.0.0", default-features = false }
-pallet-session = { version = "2.0.0", default-features = false, features = ["historical"] }
-#pallet-session-benchmarking = { version = "2.0.0", default-features = false, optional = true }
-pallet-tcr = { version = "2.0.0", default-features = false, path = "../pallets/tcr" }
-pallet-timestamp = { version = "2.0.0", default-features = false }
-pallet-transaction-payment = { version = "2.0.0", default-features = false }
-pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0", default-features = false }
-pallet-utility = { version = "2.0.0", default-features = false }
-parity-scale-codec = { version = "1.3.5", default-features = false, features = ["derive"] }
+frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, optional = true }
+frame-executive = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, optional = true }
+frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+nodle-chain-primitives = { default-features = false, path = "../primitives" }
+pallet-allocations = { default-features = false, path = "../pallets/allocations" }
+pallet-amendments = { default-features = false, path = "../pallets/amendments" }
+pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+pallet-emergency-shutdown = { default-features = false, path = "../pallets/emergency-shutdown" }
+pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+pallet-grants = { default-features = false, path = "../pallets/grants" }
+pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+pallet-mandate = { git = "https://github.com/ETeissonniere/pallet-mandate", branch = "rococo-v1", default-features = false }
+pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+pallet-offences = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+#pallet-offences-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, optional = true }
+pallet-poa = { default-features = false, path = "../pallets/poa" }
+pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+pallet-recovery = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+pallet-reserve = { default-features = false, path = "../pallets/reserve" }
+pallet-root-of-trust = { default-features = false, path = "../pallets/root-of-trust" }
+pallet-root-of-trust-runtime-api = { default-features = false, path = "../pallets/root-of-trust/rpc/runtime-api" }
+pallet-scheduler = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+pallet-session = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, features = ["historical"] }
+#pallet-session-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, optional = true }
+pallet-tcr = { default-features = false, path = "../pallets/tcr" }
+pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+parity-scale-codec = { version = "1.3.6", default-features = false, features = ["derive"] }
 safe-mix = { version = "1.0.0", default-features = false }
 serde = { version = "1.0.116", optional = true, features = ["derive"] }
-sp-api = { version = "2.0.0", default-features = false }
-sp-application-crypto = { version = "2.0.0", default-features = false }
-sp-authority-discovery = { version = "2.0.0", default-features = false }
-sp-consensus-babe = { version = "0.8.0", default-features = false }
-sp-block-builder = { version = "2.0.0", default-features = false }
-sp-core = { version = "2.0.0", default-features = false }
-sp-inherents = { version = "2.0.0", default-features = false }
-sp-io = { version = "2.0.0", default-features = false }
-sp-offchain = { version = "2.0.0", default-features = false }
-sp-runtime = { version = "2.0.0", default-features = false }
-sp-session = { version = "2.0.0", default-features = false }
-sp-std = { version = "2.0.0", default-features = false }
-sp-transaction-pool = { version = "2.0.0", default-features = false }
-sp-version = { version = "2.0.0", default-features = false }
+sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+sp-session = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+sp-version = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 static_assertions = "1.1.0"
 
 [build-dependencies]
